# sem5

./: .gitignore
funkcyjne/: 15.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs  26.hs  27_28_29.hs  30_31_32.hs  33.hs  34.hs  36.hs  38.hs  39.hs  40_41_42_43.hs  44_not.hs  45.hs  47.hs  48.hs  49.hs  50.hs
funkcyjne/02/: myFunc.hs
funkcyjne/1.2/: myFunc.js  myFunc.py
funkcyjne/14/: WC.hs  file  solutions.hs
funkcyjne/2.16/: euler.hs
funkcyjne/2.17/: solution.hs
funkcyjne/2.18/: solution.hs
funkcyjne/2.19/: solutions.hs
funkcyjne/kartkowka/: zadanie1.js  zadanie2.js  zadanie3.js
funkcyjne/lab1/: intro.js  intro.py
funkcyjne/wyklad/: main.hs  main2.hs
jftt/compiler/: CMakeLists.txt
jftt/compiler/hdrs/: compiler.hpp
jftt/compiler/srcs/: compiler.cpp  lexer.l  main.cpp  parser.y
jftt/compiler/test/: simpleTest.cpp
jftt/cw1/: zadanie6.tex
jftt/lab1/: Cargo.toml  fa  fa.c  fa.h  fa_main.c  kmp  kmp.c  kmp.h  kmp_main.c  lib.c  lib.h  main.c  test-ASCII.txt  test.c
jftt/lab1/src/: fa.rs  kmp.rs  lib.rs
jftt/lab1_done/: fa.c  fa.h  kmp.c  kmp.h  main.c  test.c
jftt/lab2/: parser.l
jftt/lab2/zadanie1/: Makefile  parser.l
jftt/lab2/zadanie2/: Makefile  another_parser.l  lex.yy.c  parser  parser.l  test.py
jftt/lab2/zadanie3/: Makefile  parser.l  test.c
jftt/lab2/zadanie4/: Makefile  parser  parser.l  test_file
jftt/lab3/: CMakeLists.txt  Makefile  test.l  test.y  test_l.c  test_y.c  test_y.h
jftt/lab3/hdrs/: gf.hpp  lexer.hpp  parseState.hpp  parser.hpp  project.hpp
jftt/lab3/python/: gf.py  gf2.py  lexer.py  parseState.py  parser.py  testFile
jftt/lab3/srcs/: gf.cpp  lexer.cpp  lexer.l  main.cpp  otherTestFile  parseState.cpp  parser.cpp  parser.y  project.cpp  testFile
jftt/lab3/test/: simpleTest.cpp
jftt/wyklad_bison/: Makefile  bool-calc.l  bool-calc.y  bool-calc_l.c  bool-calc_y.c  bool-calc_y.h  deklaracje.l  deklaracje.y  deklaracje_l.c  deklaracje_y.c  deklaracje_y.h
jpp/lab1/ada/: main.adb
jpp/lab1/c/: main.c
jpp/lab1/cpp/: main.cpp
jpp/lab1/prolog/: main.pl
jpp/lab2/: Makefile  lib.adb  lib.ads  lib.c  lib_req.adb  lib_req.ads  lib_req.c  test.adb  test.c  test_req.adb  test_req.c
jpp/lab2/ada/: lib.adb  lib.ads  lib_req.adb  lib_req.ads  main.adb  multilang.gpr  test.adb  test_lib.adb  test_req  test_req.adb
jpp/lab2/ada/src/: c_main.c  lib.adb  lib.ads  lib_req.adb  lib_req.ads  test.adb  test_lib.ads  test_req.adb
jpp/lab2/c/: lib.c  lib.h  lib_req.c  lib_req.h  test.c  test_req.c
jpp/lab2/c/src/: lib_req.c  lib_req.h  main.adb  test.c  test_req.c
jpp/lab2/rust/: Cargo.toml  build.rs  foo.c
jpp/lab2/rust/c/: lib.h
jpp/lab2/rust/lab1/src/: iteratively.rs  lib.rs  reqursively.rs
jpp/lab2/rust/src/: c_implementation.rs  iteratively.rs  lib.rs  main.rs  reqursively.rs
jpp/lab3/cpp/: CMakeLists.txt
jpp/lab3/cpp/hdrs/: cpp.hpp
jpp/lab3/cpp/srcs/: cpp.cpp  main.cpp
jpp/lab3/cpp/test/: simpleTest.cpp
jpp/lab3/javaMvn/: .project  pom.xml
jpp/lab3/python/: gf.py  gf_tests.py
jpp/lab4/cpp/: CMakeLists.txt
jpp/lab4/cpp/hdrs/: doubleWrapper.hpp  gf.hpp  hamming.hpp  polynomial.hpp
jpp/lab4/cpp/srcs/: doubleWrapper.cpp  gf.cpp  polynomial.cpp
jpp/lab4/cpp/test/: simpleTest.cpp
jpp/lab4/first/hdrs/: cpp.hpp  gf.hpp
jpp/lab4/first/srcs/: cpp.cpp  gf.cpp  main.cpp
jpp/lab4/first/test/: simpleTest.cpp
jpp/lab4/javaMvn/: .project  pom.xml
jpp/lab4/javaMvn/src/main/java/wilk/marcin/: App.java  DoubleWrapper.java  NoCoeffException.java  Polynomial.java  (+2 more)
jpp/lab4/python/: doubleWrapper.py  gf.py  main.py  polynomial.py  polynomialType.py
jpp/lab4/second/: CMakeLists.txt
jpp/lab4/second/hdrs/: doubleWrapper.hpp  gf.hpp  polynomial.hpp  second.hpp
jpp/lab4/second/srcs/: doubleWrapper.cpp  hamming.cpp  main.cpp  second.cpp
jpp/lab4/second/test/: simpleTest.cpp
jpp/lab5/: program.hs  program.pl
jpp/lab6/ada/: default.gpr
jpp/lab6/ada/src/: main.adb
jpp/lab6/go/: go.mod  philosophers.go
jpp/lab6/javaMvn/: pom.xml
naukowe/lab1/: floats.c  sprawozdanie.tex  sprawozdanie_marcin_wilk.tex  zadanie1.jl  zadanie1_marcin_wilk.jl  zadanie2.jl  zadanie2_marcin_wilk.jl  zadanie3.jl  zadanie3_marcin_wilk.jl  zadanie4.jl  zadanie4_marcin_wilk.jl  zadanie5.jl  zadanie5_marcin_wilk.jl  zadanie6.jl  zadanie6_marcin_wilk.jl  zadanie7_marcin_wilk.jl
naukowe/lab2/: sprawozdanie_marcin_wilk.tex  zadanie1_marcin_wilk.jl  zadanie2_marcin_wilk.jl  zadanie3_marcin_wilk.jl  zadanie4_marcin_wilk.jl  zadanie5_marcin_wilk.jl  zadanie6_marcin_wilk.jl
naukowe/lab2/zadanie2_python/: main.py
naukowe/lab3/: sprawozdanie_marcin_wilk.tex  zadanie1_2_3_marcin_wilk.jl  zadanie4_marcin_wilk.jl  zadanie5_marcin_wilk.jl  zadanie6_marcin_wilk.jl
naukowe/lab4/: sprawozdanie_marcin_wilk.tex  zadanie1_2_3_marcin_wilk.jl  zadanie1_marcin_wilk.jl
naukowe/lab5/: A.txt  asdf  b.txt  matrixgen.jl  zadanie.jl
(+20 files in other folders)
